# python_packaging_tool

./: .editorconfig  .flake8  .gitignore  README.md  build_universal.bat  main.py  pyproject.toml  requirements.txt  run.bat  version.py
core/: __init__.py  analyzer_constants.py  dependency_analyzer.py  nuitka_config.py  packager.py  version_info.py
core/analyzer/: __init__.py  dynamic_tracing.py  gui_detection.py  hidden_imports.py  optimization.py  package_detection.py
core/packaging/: __init__.py  base.py  dependency_installer.py  icon_convert_helper.py  icon_processor.py  network_utils.py  nuitka_packager.py  pyinstaller_packager.py  venv_manager.py
gui/: __init__.py  main_window.py
gui/controllers/: __init__.py  workers.py
gui/dialogs/: __init__.py  nuitka_options_dialog.py  version_info_dialog.py
gui/handlers/: __init__.py  file_handlers.py  gcc_handler.py  packaging_handler.py
gui/styles/: __init__.py  themes.py
gui/widgets/: __init__.py  icons.py
utils/: __init__.py  constants.py  dependency_manager.py  gcc_downloader.py  python_finder.py
