[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-packaging-tool"
version = "1.3.0"
description = "A modern GUI tool for packaging Python scripts into Windows executables"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Python Packaging Tool Team"}
]
keywords = ["python", "packaging", "pyinstaller", "nuitka", "exe", "gui", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "PyQt6>=6.4.0",
    "pyinstaller>=6.0.0",
    "nuitka>=1.9.0",
    "requests>=2.28.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
]
theme = [
    "darkdetect>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-packaging-tool"
Documentation = "https://github.com/yourusername/python-packaging-tool/blob/main/README.md"
Repository = "https://github.com/yourusername/python-packaging-tool"
"Bug Tracker" = "https://github.com/yourusername/python-packaging-tool/issues"

[project.scripts]
python-packager = "main:main"

[tool.setuptools]
packages = ["gui", "gui.styles", "gui.widgets", "gui.controllers", "core", "utils"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.ico", "*.png"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv/*", "venv/*", "build/*", "dist/*"]

# Mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyinstaller.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nuitka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "darkdetect.*"
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
py-version = "3.8"
jobs = 0
limit-inference-results = 100
persistent = true
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0902",  # Too many instance attributes
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0703",  # Broad exception caught
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "f", "fp", "ui"]

[tool.pylint.design]
max-args = 10
max-attributes = 20
max-bool-expr = 5
max-branches = 15
max-locals = 25
max-parents = 7
max-public-methods = 30
max-returns = 6
max-statements = 60
min-public-methods = 0

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
